[gd_scene load_steps=3 format=3 uid="uid://level_node_scene"]

[ext_resource type="Script" path="res://scripts/ui/level_node.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glow"]
bg_color = Color(1, 0.9, 0.3, 0.5)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.9, 0.3, 0.8)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="LevelNode" type="Control"]
custom_minimum_size = Vector2(100, 120)
anchors_preset = 0
offset_right = 100.0
offset_bottom = 120.0
script = ExtResource("1")

[node name="GlowEffect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.9, 0.3, 0.5)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -30.0
offset_right = 40.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
text = "Level"

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 25.0
grow_horizontal = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="StarsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="StarsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="StarsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="LockIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
